--- a/gateway-api/src/main/resources/application.yaml
+++ b/gateway-api/src/main/resources/application.yaml
@@ -9,13 +9,13 @@ spring:
       mvc:
         routes:
           - id: mototrace-api
-            uri: http://localhost:8091/api/v1
+            uri: http://${ROUTE_HOST_MOTOTRACE_API:localhost}:8091/api/v1
             predicates:
               - Path=/mototrace-api/**
             filters:
               - RewritePath=/mototrace-api/?(?<segment>.*), /${segment}
           - id: worker-position
-            uri: http://localhost:8092/api/v1
+            uri: http://${ROUTE_HOST_WORKER_POSITION:localhost}:8092/api/v1
             predicates:
               - Path=/worker-position/**
             filters:
