--- a/mototrace-api/src/main/resources/application.yaml
+++ b/mototrace-api/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mototrace
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/mototrace
     username: user
     password: pass
     driverClassName: org.postgresql.Driver
