--- a/worker-position/Dockerfile
+++ b/worker-position/Dockerfile
@@ -1,7 +1,18 @@
-FROM openjdk:22-jdk-slim
+FROM eclipse-temurin:21-jdk-alpine AS builder
+
+RUN apk add --no-cache maven
 
 WORKDIR /app
 
-COPY target/worker-position*.jar /app/
+COPY pom.xml .
+COPY src ./src
 
-ENTRYPOINT ["java", "-jar", "/app/worker-position*.jar"]
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:21-jre-alpine
+
+WORKDIR /app
+
+COPY --from=builder /app/target/worker-position-*.jar /app/worker-position.jar
+
+ENTRYPOINT ["java", "-jar", "/app/worker-position.jar"]
